@@ -764,12 +764,22 @@ condition|)
 block|{
 if|if
 condition|(
-name|lastClusterStateVersion
-operator|==
 name|clusterState
 operator|.
 name|getZkClusterStateVersion
 argument_list|()
+operator|!=
+literal|null
+operator|&&
+name|clusterState
+operator|.
+name|getZkClusterStateVersion
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|lastClusterStateVersion
+argument_list|)
 operator|&&
 name|baseUrlForBadNodes
 operator|.
